--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#E3E3E3</color>
+    <color name="medium_gray">#767676</color>
+    <color name="medium_blue">#3398D4</color>
+    <color name="light_grayish_blue">#E2E8F0</color>
+    <color name="light_sky_blue">#E0F2FE</color>
 </resources>
