Add resource files, Design UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="medium_blue">#3398D4</color>
     <color name="light_grayish_blue">#E2E8F0</color>
     <color name="light_sky_blue">#E0F2FE</color>
+    <color name="light_gray">#909399</color>
 </resources>
