Add resource files, Design UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_grayish_blue">#E2E8F0</color>
     <color name="light_sky_blue">#E0F2FE</color>
     <color name="light_gray">#909399</color>
+    <color name="quite_light_gray">#B3B3B3</color>
 </resources>
