--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_sky_blue">#E0F2FE</color>
     <color name="light_gray">#909399</color>
     <color name="quite_light_gray">#B3B3B3</color>
+    <color name="gray_blue">#4A5568</color>
 </resources>
