Design Home Page

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/F02"
             android:padding="12dp"
-            android:background="@drawable/custom_edittext"
+            android:background="@drawable/rounded_border"
             android:layout_centerVertical="true"/>
 
         <EditText
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:padding="12dp"
             android:layout_marginTop="25dp"
-            android:background="@drawable/custom_edittext"
+            android:background="@drawable/rounded_border"
             android:layout_below="@+id/forget_email"
             android:visibility="invisible"
             android:hint="@string/F02_1"/>
