--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
         android:layout_centerInParent="true"
         android:inputType="text"
         android:hint="@string/SI01"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:padding="12dp"/>
 
     <EditText
         android:id="@+id/login_password"
         android:layout_below="@+id/login_email"
         android:hint="@string/SI02"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:layout_marginTop="30dp"
         android:inputType="textPassword"
         android:layout_width="match_parent"
