--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linear_layout"
         android:padding="12dp"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:layout_marginTop="20dp"
         android:hint="@string/R02"/>
 
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/reset_password"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:padding="12dp"
         android:layout_marginTop="20dp"
         android:hint="@string/R02"/>
