--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,14 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:hint="@string/SU_01"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:padding="12dp"/>
 
     <EditText
         android:id="@+id/signup_password"
         android:layout_below="@+id/signup_email"
         android:hint="@string/SU_02"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:layout_marginTop="15dp"
         android:inputType="textPassword"
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
         android:id="@+id/signup_confirm_password"
         android:layout_below="@+id/signup_password"
         android:hint="@string/SU_03"
-        android:background="@drawable/custom_edittext"
+        android:background="@drawable/rounded_border"
         android:layout_marginTop="15dp"
         android:inputType="textPassword"
         android:layout_width="match_parent"
