--- a/app/src/main/res/layout/item_featured_post.xml
+++ b/app/src/main/res/layout/item_featured_post.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
     <LinearLayout
@@ -13,7 +13,7 @@
             android:id="@+id/postThumbnail"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"/>
+            android:scaleType="center"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -40,7 +40,8 @@
                     android:id="@+id/postBookmark"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/bookmark_uncheck"/>
+                    android:src="@drawable/bookmark_uncheck"
+                    android:padding="2dp"/>
             </LinearLayout>
 
             <LinearLayout
