--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp" >
+    android:layout_height="70dp"
+    android:padding="10dp">
     
     <ImageView
-        android:layout_width="50dp"
+        android:id="@+id/homeIcon"
+        android:layout_width="55dp"
         android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:src="@drawable/my_app_logo"/>
     
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginStart="143dp">
+        android:layout_marginStart="120dp">
         
         <ImageView
             android:id="@+id/searchIcon"
