--- a/app/src/main/res/layout/item_search_user.xml
+++ b/app/src/main/res/layout/item_search_user.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="74dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:background="@color/white">
         
         <ImageView
             android:id="@+id/searchUserAvatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="17dp"/>
+            android:layout_marginTop="7dp"/>
         
         <LinearLayout
             android:layout_width="0dp"
@@ -26,7 +27,7 @@
                 android:id="@+id/searchUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="6dp"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
@@ -42,7 +43,8 @@
         <ImageView
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/close"/>
     </LinearLayout>
