--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray_blue">#4A5568</color>
     <color name="background_color">#F5F7FA</color>
     <color name="title_color">#2D3748</color>
+    <color name="background_button_edit">#EBEEF5</color>
 </resources>
