--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <include layout="@layout/navbar" />
+    <include
+        android:id="@+id/navbar"
+        layout="@layout/navbar" />
 
     <ScrollView
         android:id="@+id/homeScrollView"
