--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -8,7 +8,7 @@
     tools:context=".UploadActivity">
 
     <include
-        android:id="@+id/include2"
+        android:id="@+id/navbar"
         layout="@layout/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:layout_height="2dp"
         android:background="@drawable/rounded_border"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2"/>
+        app:layout_constraintTop_toBottomOf="@+id/navbar"/>
 
     <RelativeLayout
         android:id="@+id/toolbar"
