--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -49,6 +49,8 @@
             android:id="@+id/userAvatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:padding="4dp"
+            android:scaleType="fitCenter"/>
     </LinearLayout>
 </LinearLayout>
